# FS2Elastic

./: README.md  pyproject.toml
.github/workflows/: cicd.yaml
src/fs2elastic/: confbuilder-sample.conf  confbuilder.py  dataset_processor.py  es_handler.py  fs2elastic.py  typings.py
